--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TodoList</title>
+    <link rel="icon" href="/public/favicon1.ico">
     <link rel="stylesheet" href="public/styles.css">
 </head>
 <body>
